--- a/Dex.html
+++ b/Dex.html
@@ -542,7 +542,7 @@
     });
     function openFullscreen(){let elem=document.documentElement;elem.requestFullscreen?elem.requestFullscreen():elem.mozRequestFullScreen?elem.mozRequestFullScreen():elem.webkitRequestFullscreen?elem.webkitRequestFullscreen():elem.msRequestFullscreen&&elem.msRequestFullscreen()}buttons.forEach((btn=>{btn.addEventListener("click",handleButtonClick)}));
   </script>
-  <script src="path/to/your/script.js"></script>
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/scottschiller/Snowstorm/snowstorm.js" type="text/javascript"></script>
   <script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"></script>
   <div class="footer">
